--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,21 @@
 <div class="d-flex">
-    <!--sidebar-->
-    <div class="bg-dark border-right p-3" id="sidebar">
-        <h3 class="text-white">Gifs-App</h3>
-        <hr class="text-white">
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">
-                Principal
-            </a>
+<!--Sidebar-->
+<app-sidebar></app-sidebar>
+<!--end Sidebar-->
+<app-gifs-page class="container"></app-gifs-page>
+<!-- <div class="container">
+    <div class="row p-3">
+        <div class="col">
+            <h5>Buscar:</h5>
+            <input type="text" class="form-control" placeholder="Buscar Gifs.........">
         </div>
     </div>
-    <!--end sidebar-->
-    <div class="container">
-        <div class="row p-3">
-            <div class="col">
-                <h5>Buscar:</h5>
-                <input type="text" class="form-control" placeholder="Buscar Gifs.........">
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col">
-                hholas
-            </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            hholas
         </div>
     </div>
+</div> -->
 </div>
 
