--- a/src/app/gifs/mostrador/mostrador.component.html
+++ b/src/app/gifs/mostrador/mostrador.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div *ngFor="let item of resultados" class="col-md-4 col-sm-6 p-1">
+    <div *ngFor="let item of resultados" class="col-md-4 col-sm-6 p-1  animate__animated animate__fadeIn" >
         <div class="card">
             <img [src]="item.images.downsized_medium.url" alt="{{item.title}}">
             <div class="card-body">
